notes to experiments

--- a/expe.tex
+++ b/expe.tex
@@ -232,15 +232,15 @@ A greater challenge arose from thermal expansion of the foil. In order to fully 
 \paragraph{Difference between the sieves and fishnets}%{{{
 The meshes were made two purposes -- either as sieves used in the second sieving apparatus described above, or as metamaterial samples known as \textit{fishnets}, which are predicted to exhibit a negative index of refraction (see Sect. \ref{section_fishnet}). The difference between these applications is subtle; the meshes intended as sieves would surely exhibit a resonance in the terahertz range. 
 
-Titanium dioxide spheres were prepared in the size range of 30--60 $\upmu$m, which determined the hole diameter of sieves. To maintain mechanical robustness, the periodicity in sieves was kept much larger than the diameter, usually $300\times 300$ $\upmu$m. 
+The optimum  size range of for the titanium dioxide spheres resonating around 1 THz is around 30--60 $\upmu$m, which determined the hole diameter of sieves. To maintain mechanical robustness, the periodicity in sieves was kept much larger than the hole diameter, usually $300\times 300$ $\upmu$m, and the thickness was chosen as 20 or 30 $\upmu$m.
 
-Fishnets had the same periodicity as sieves, but the holes did not have to be elliptical, and their dimensions were chosen between 150 and 280 $\upmu$m. Increasing the hole area leads to a broader frequency range of negative effective index of refraction, as shown in the Chapter \pageref{section_fishnet}. 
+Fishnets had the same periodicity as sieves, but the holes did not have to be elliptical, and their dimensions were chosen between 150 and 280 $\upmu$m. Increasing the hole area leads to a broader frequency range of negative effective index of refraction, as shown in the Chapter \pageref{section_fishnet}. For cleaner cutting, a thinner stainless foil was used, with 5 $\upmu$m thickness.
 
 % TODO
 %To achieve the required precision of sieving, we fabricated the sieves by femtosecond laser drilling of 20--30 $\upmu$m thick stainless steel steel foil
 %These sieves then were employed in a device that subjected the microsphere sample to acoustic vibrations, improving the speed of the demanding sieving process to acceptable level
 
-\begin{figure}[ht] \caption{Microscopic photographs of fishnets cut from a 20 $\mu$m thick stainless steel foil, \textbf{(a)} holes of $180\times 200$ $\mu$m,  \textbf{(b)} holes of $230\times 255$ $\mu$m, cut by a "z"-shaped movement of the beam. Periodicity of both fishnets is $300\times 300$ $\mu$m, real size of both photograps is $1.2\times 0.9$ mm.  } \label{fg_mesh} \centering 
+\begin{figure}[ht] \caption{Microscopic photographs of fishnets cut from a 5 $\mu$m thick stainless steel foil, \textbf{(a)} holes of $180\times 200$ $\mu$m,  \textbf{(b)} holes of $230\times 255$ $\mu$m, cut by a "z"-shaped movement of the beam. Periodicity of both fishnets is $300\times 300$ $\mu$m, real size of both images is $1.2\times 0.9$ mm.  } \label{fg_mesh} \centering 
 	\begin{overpic}[height=.35\textwidth]{img/fishnet-sample28a-180x200hole-300x300pitch.pdf}  \put(0,71) {\textbf{(a)}} \end{overpic}
 	\begin{overpic}[height=.35\textwidth]{img/fishnet-sample28c-230x255hole-300x300pitch.pdf}  \put(0,67) {\textbf{(b)}} \end{overpic}
 \end{figure}
