--- a/t.tex
+++ b/t.tex
@@ -51,8 +51,8 @@
 % % Computers are useless. They can only give you answers. -- P. Picasso (1968)
 % \input{numeric.tex}
 %
-%\chapter{Experimental methods}
-%\input{expe.tex}
+\chapter{Experimental methods}
+\input{expe.tex}
 
 \chapter{Results}
 % The purpose of computing is insight, not numbers. -- R. W. Hamming
