sphere sieving results

--- a/result.tex
+++ b/result.tex
@@ -647,6 +647,9 @@ We performed series of experiments to measure the effective permeability spectru
 
 We computed the single-cell permeability spectra (i. e. the yellow curve in Fig. \ref{fg_experimentalConv}) for many different resonator sizes and add them up. The resulting weighted average (blue curve) then matches the experimental data (red dots) nearly exactly. It shall be however noted that the averaged real part of $\mu_{\text{eff}}$ remained positive even with the best sieving results obtained so far. %TODO
 
+sphere_sieving_eps.pdf
+sphere_sieving_mu.pdf
+sphere_sieving_n.pdf
 
 %}}}
 %   SKIP  \begin{figure}[h] \caption{Current-driven homogenization results for TiO$_2$ spheres %{{{
